--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Heading</h1>
-    <p>This is a paragraph</p>
-</body>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="portal.css">
+        <title>WDD 230 Portal</title>
+    </head>
+    <body>
+        <header>
+            <h1>Bron Neibaur</h1>
+            <img id="Me" src="Me.jpg" alt="Me">
+        </header>
+        <main>
+            <h2>WDD 230: Assignment Portal</h2>
+            <hr>
+            <ul>
+                <li>Lesson 02: <a href="">Assignment Link</a></li>
+                <li>Lesson 03: <a href="">Assignment Link</a></li>
+                <li>Lesson 04: <a href="">Link</a>|<a href="">Link</a></li>
+            </ul>
+        </main>
+        <footer>
+            <div>
+                &copy;<span id="copyright"></span> 2020 | Bron Neibaur | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+            </div>
+            <div style="color:white">
+            Last Updated: <span id="lastUpdate"></span>
+            </div>
+            <script>
+            document.getElementById("lastUpdate").innerHTML = document.lastModified;
+            </script>    
+        </footer>
+    </body>
 </html>
