--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </main>
         <footer>
             <div>
-                &copy;<span id="copyright"></span> 2020 | Bron Neibaur | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a>
+                &copy;<span id="year"></span> 2020 | Bron Neibaur | Idaho | <a href="https://www.byui.edu/online">BYUI Online Learning</a>
             </div>
             <div style="color:white">
             Last Updated: <span id="lastUpdate"></span>
