--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <h2>WDD 230: Assignment Portal</h2>
             <hr>
             <ul>
-                <li>Lesson 02: <a href="https://bjneib.github.io/lesson2/design-principles.html">Assignment Link</a></li>
-                <li>Lesson 03: <a href="">Assignment Link</a></li>
-                <li>Lesson 04: <a href="">Link</a>|<a href="">Link</a></li>
+                <li>Lesson 02: <a href="https://bjneib.github.io/lesson2/design-principles.html">Design Principles</a></li>
+                <li>Lesson 03: <a href="https://bjneib.github.io/lesson3/index.html"">Weather Site Design</a></li>
+                <li>Lesson 04: <a href="https://bjneib.github.io/lesson4/preston-4.html">Preston</a></li>
             </ul>
         </main>
         <footer>
