--- a/lesson5/preston-4.html
+++ b/lesson5/preston-4.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather Day</title>
   <meta name="description"
     content="5 day weather forecast for Preston, Idaho on the Weather Day website. Explore and learn before you travel.">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
@@ -12,7 +11,7 @@
   <link rel="stylesheet" href="css/preston.css">
   <link rel="stylesheet" href="css/medium.css">
   <link rel="stylesheet" href="css/large.css">
-  <title>Preston Weather</title>
+  <title>Weather Day Preston</title>
 </head>
 
 <body>
@@ -41,7 +40,7 @@
   <main>
     <h2>Preston Idaho</h2>
     <div class="content-box-1">
-      <img src="images\weatherbanner.jpeg" alt="Banner Summary">
+      <img src="images/weatherbanner.jpeg" alt="Banner Summary">
       <section class="box-summary">
         <h3>Weather Summary</h3>
         <p>Currently: Sunny</p>
@@ -66,27 +65,27 @@
         <tbody>
           <tr>
             <td>
-              <img src="images\sunny.png" alt="Sunny">
+              <img src="images/sunny.png" alt="Sunny">
               <br>
               <span>89°F</span>
             </td>
             <td>
-              <img src="images\sunny.png" alt="Sunny">
+              <img src="images/sunny.png" alt="Sunny">
               <br>
               <span>87°F</span>
             </td>
             <td>
-              <img src="images\sunny.png" alt="Sunny">
+              <img src="images/sunny.png" alt="Sunny">
               <br>
               <span>78°F</span>
             </td>
             <td>
-              <img src="images\sunny.png" alt="Sunny">
+              <img src="images/sunny.png" alt="Sunny">
               <br>
               <span>75°F</span>
             </td>
             <td>
-              <img src="images\sunny.png" alt="Sunny">
+              <img src="images/sunny.png" alt="Sunny">
               <br>
               <span>72°F</span>
             </td>
@@ -95,7 +94,7 @@
       </table>
     </div>
     <div class="content-box-3">
-      <img src="images\fall.webp" alt="Fall">
+      <img src="images/fall.webp" alt="Fall">
       <h3>Article</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda deleniti praesentium voluptatem repellendus
         quibusdam doloremque. Illum porro provident asperiores maxime aut dolor modi dolorum ab ipsum! Impedit expedita
@@ -112,7 +111,7 @@
         <p>208-123-4567</p>
         <p>contact@weatherday.com</p>
       </section>
-      <img src="images\preston.jpg" alt="Preston Map">
+      <img src="images/preston.jpg" alt="Preston Map">
     </div>
   </main>
   <footer>
