--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <li>Lesson 02: <a href="https://bjneib.github.io/lesson2/design-principles.html">Design Principles</a></li>
                 <li>Lesson 03: <a href="https://bjneib.github.io/lesson3/index.html"">Weather Site Design</a></li>
                 <li>Lesson 04: <a href="https://bjneib.github.io/lesson4/preston-4.html">Preston</a></li>
+                <li>lesson 05: <a href="https://bjneib.github.io/lesson5/preston-4.html">More Preston</a></li>
+                <li>lesson 06: <a href="https://bjneib.github.io/lesson6/preston-6.html">Preston Image Work</a></li>
             </ul>
         </main>
         <footer>
