--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -40,7 +40,12 @@
   <main>
     <h2>Preston Idaho</h2>
     <div class="content-box-1">
-      <img src="images/weatherbanner.jpeg" alt="Banner Summary">
+      <!--<img src="images/weatherbanner.jpeg" alt="Banner Summary">-->
+      <picture>
+        <source media="(max-width: 400px)" srcset="images/wdd230_image_franklinSmall.jpg">
+        <source media="(max-width: 800px)" srcset="images/wdd230_image_franklinMedium.jpg">
+        <img src="images/wdd230_image_franklinLarge.jpg" alt="Banner Summary">
+      </picture>
       <section class="box-summary">
         <h3>Weather Summary</h3>
         <p>Currently: Sunny</p>
