--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -30,11 +30,11 @@
     <ul class="navigation" id="my-navigation">
       <li><a href="#" onclick="toggle()">&#9776; Menu</a></li>
       <li><a href="#">Home</a></li>
-      <li><a class="active" href="preston-4.html">Preston</a></li>
+      <li><a class="active" href="https://bjneib.github.io/lesson6/preston-6.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
       <li><a href="#">Storm Center</a></li>
-      <li><a href="#">Gallery</a></li>
+      <li><a href="https://bjneib.github.io/lesson7/gallery-7.html">Gallery</a></li>
     </ul>
   </nav>
   <main>
