--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -39,63 +39,54 @@
     </nav>
     <main>
         <h2>Weather Gallery</h2>
-        <div id="gallery_imgs">
+        <div class="container">
             <figure>
-                <img class="galleryImage" alt="Cloud Covered Mountain" src="images/placeholder2.jpg"
-                    data-src="images/snow.jpeg">
-                <figcaption>A cloud covered mountain</figcaption>
+                <img src="images/placeholder2.jpg" data-src="images/snow.jpeg" alt="Snowscape">
+                <figcaption>Snow covered road</figcaption>
             </figure>
             <figure>
-                <img class="galleryImage" alt="Thunderstorm" src="images/placeholder2.jpg"
-                    data-src="images/drop.webp">
-                <figcaption>Thunderstorm rolls in</figcaption>
+                <img src="images/placeholder2.jpg" data-src="images/drop.webp">
+                <figcaption>Raindrop closeup</figcaption>
             </figure>
             <figure>
-                <img class="galleryImage" alt="Fog Covered Mountain" src="images/placeholder2.jpg"
-                    data-src="images/rainbow.webp">
-                <figcaption>Fog covering mountain</figcaption>
+                <img src="images/placeholder2.jpg" data-src="images/rainbow.webp">
+                <figcaption>Rainbow over a farm</figcaption>
             </figure>
             <figure>
-                <img class="galleryImage" alt="Lightning Strike" src="images/placeholder2.jpg"
-                    data-src="images/clouds.jpeg">
-                <figcaption>Lightning striking</figcaption>
+                <img src="images/placeholder2.jpg" data-src="images/clouds.jpeg">
+                <figcaption>Sunny weather over a farm</figcaption>
             </figure>
             <figure>
-                <img class="galleryImage" alt="Snow Covered Mountain" src="images/placeholder2.jpg"
-                    data-src="images/fall.jpeg">
-                <figcaption>Snow covered mountain</figcaption>
+                <img src="images/placeholder2.jpg" data-src="images/fall.jpeg">
+                <figcaption>Fall street</figcaption>
             </figure>
             <figure>
-                <img class="galleryImage" alt="Snowfall" src="images/placeholder2.jpg" data-src="images/stormy.jpeg">
-                <figcaption>Snowfall in the city</figcaption>
+                <img src="images/placeholder2.jpg" data-src="images/stormy.jpeg">
+                <figcaption>Brewing storm</figcaption>
             </figure>
             <figure>
-                <img class="galleryImage" alt="Rainbow in Storm" src="images/placeholder2.jpg"
-                    data-src="images/ice.jpeg">
-                <figcaption>A Rainbow from clouds</figcaption>
+                <img src="images/placeholder2.jpg" data-src="images/ice.jpeg">
+                <figcaption>Cold and icy</figcaption>
             </figure>
             <figure>
-                <img class="galleryImage" alt="Tornado" src="images/placeholder2.jpg" data-src="images/lightning.jpeg">
-                <figcaption>Tornado touching down</figcaption>
+                <img src="images/placeholder2.jpg" data-src="images/lightning.jpeg">
+                <figcaption>Lightning strike</figcaption>
             </figure>
             <figure>
-                <img class="galleryImage" alt="Sunny Skies" src="images/placeholder2.jpg"
-                    data-src="images/sunray.jpeg">
-                <figcaption>Sun shining in clouds</figcaption>
+                <img src="images/placeholder2.jpg" data-src="images/sunray.jpeg">
+                <figcaption>Clouds dispersing</figcaption>
             </figure>
             <figure>
-                <img class="galleryImage" alt="Sunset" src="images/placeholder2.jpg" data-src="images/fog.jpeg">
-                <figcaption>Beautiful Sunset</figcaption>
+                <img src="images/placeholder2.jpg" data-src="images/fog.jpeg">
+                <figcaption>Sun breaks through fog</figcaption>
             </figure>
             <figure>
-                <img class="galleryImage" alt="Above the Clouds" src="images/placeholder2.jpg"
-                    data-src="images/snowscape.jpeg">
-                <figcaption>Above the clouds</figcaption>
+                <img src="images/placeholder2.jpg" data-src="images/snowscape.jpeg">
+                <figcaption>Night time winter</figcaption>
             </figure>
             <figure>
-                <img class="galleryImage" alt="Clouds Hover Over Mountain" src="images/placeholder2.jpg"
-                    data-src="images/night.webp">
-                <figcaption>Clouds over the mountains</figcaption>
+                <img src="images/placeholder2.jpg" data-src="images/night.webp">
+                <figcaption>Peaceful night</figcaption>
             </figure>
         </div>
     </main>
