--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li>Lesson 04: <a href="https://bjneib.github.io/lesson4/preston-4.html">Preston</a></li>
                 <li>lesson 05: <a href="https://bjneib.github.io/lesson5/preston-4.html">More Preston</a></li>
                 <li>lesson 06: <a href="https://bjneib.github.io/lesson6/preston-6.html">Preston Image Work</a></li>
+                <li>lesson 07: <a href="https://bjneib.github.io/lesson7/gallery-7.html">Gallery></a></li>
             </ul>
         </main>
         <footer>
