--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -33,7 +33,7 @@
             <li><a href="https://bjneib.github.io/lesson6/preston-6.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="#">Storm Center</a></li>
+            <li><a href="https://bjneib.github.io/lesson8/stormcenter.html">Storm Center</a></li>
             <li><a class="active" href="https://bjneib.github.io/lesson7/gallery-7.html">Gallery</a></li>
         </ul>
     </nav>
