--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -94,7 +94,7 @@
 
             <fieldset>
                 <legend>Additional Information</legend>
-                <label class="top">Additional Comments <input type="textarea" name="comments"></label>
+                <label class="top">Additional Comments <textarea name="comments" rows="4" cols="50"></textarea></label>
 
             </fieldset>
 
