--- a/lesson8/thanks.html
+++ b/lesson8/thanks.html
@@ -39,7 +39,7 @@
     </nav>
     <main>
         <h2>Storm Report Recieved</h2>
-        <p style="text-align: center;">Thank you for your storm report submission.</p>  
+        <p style="text-align: center;">Thank you for your storm report submission. Rachel is a freakin babe.</p>  
     </main>
     </main>
     <footer>
