--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -29,7 +29,7 @@
     <nav>
         <ul class="navigation" id="my-navigation">
             <li><a href="#" onclick="toggle()">&#9776; Menu</a></li>
-            <li><a href="#">Home</a></li>
+            <li><a href="https://bjneib.github.io/lesson9/index.html">Home</a></li>
             <li><a href="https://bjneib.github.io/lesson6/preston-6.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
