--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -39,6 +39,14 @@
     </nav>
     <main>
         <h2>Home</h2>
+        <div id="wireframe">
+        <a href="images/wireframeSmall.PNG">Small Wireframe</a>
+        <a href="images/wireframeMedium.PNG">Medium Wireframe</a>
+        <a href="images/wireframeLarge.PNG">Large Wireframe</a>
+        </div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam repudiandae velit quae, accusamus explicabo
+            excepturi magni suscipit asperiores facere veniam voluptate quod exercitationem impedit rem, dolorem quo
+            odit aliquam. Architecto.</p>
         <div class="cards"></div>
     </main>
     <footer>
