--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -57,46 +57,33 @@
     </div>
     <div class="content-box-2">
       <h3>5 Day Forecast</h3>
-      <table id="table">
-        <thead>
-          <tr id="inside-table">
-            <th>Wed</th>
-            <th>Thur</th>
-            <th>Fri</th>
-            <th>Sat</th>
-            <th>Sun</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <img src="images/sunny.png" alt="Sunny">
-              <br>
-              <span>89°F</span>
-            </td>
-            <td>
-              <img src="images/sunny.png" alt="Sunny">
-              <br>
-              <span>87°F</span>
-            </td>
-            <td>
-              <img src="images/sunny.png" alt="Sunny">
-              <br>
-              <span>78°F</span>
-            </td>
-            <td>
-              <img src="images/sunny.png" alt="Sunny">
-              <br>
-              <span>75°F</span>
-            </td>
-            <td>
-              <img src="images/sunny.png" alt="Sunny">
-              <br>
-              <span>72°F</span>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="forecast">
+        <div class="forecasts">
+          <div id="day1"></div>
+          <img id="img1" src="#">
+          <div id="temp1"></div>
+        </div>
+        <div class="forecasts">
+          <div id="day2"></div>
+          <img id="img2" src="#">
+          <div id="temp2"></div>
+        </div>
+        <div class="forecasts">
+          <div id="day3"></div>
+          <img id="img3" src="#">
+          <div id="temp3"></div>
+        </div>
+        <div class="forecasts">
+          <div id="day4"></div>
+          <img id="img4" src="#">
+          <div id="temp4"></div>
+        </div>
+        <div class="forecasts">
+          <div id="day5"></div>
+          <img id="img5" src="#">
+          <div id="temp5"></div>
+        </div>
+      </div>
     </div>
     <div class="content-box-3">
       <img src="images/fall.webp" alt="Fall">
