--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -58,27 +58,27 @@
     <div class="content-box-2">
       <h3>5 Day Forecast</h3>
       <div class="forecast">
-        <div class="forecasts">
+        <div class="content">
           <div id="day1"></div>
           <img id="img1" src="#">
           <div id="temp1"></div>
         </div>
-        <div class="forecasts">
+        <div class="content">
           <div id="day2"></div>
           <img id="img2" src="#">
           <div id="temp2"></div>
         </div>
-        <div class="forecasts">
+        <div class="content">
           <div id="day3"></div>
           <img id="img3" src="#">
           <div id="temp3"></div>
         </div>
-        <div class="forecasts">
+        <div class="content">
           <div id="day4"></div>
           <img id="img4" src="#">
           <div id="temp4"></div>
         </div>
-        <div class="forecasts">
+        <div class="content">
           <div id="day5"></div>
           <img id="img5" src="#">
           <div id="temp5"></div>
