--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -60,27 +60,27 @@
       <div class="forecast">
         <div class="content">
           <div id="days"></div>
-          <img id="imgs" src="#">
+          <img id="imgs" src="#" alt="#">
           <div id="temps"></div>
         </div>
         <div class="content">
           <div id="days"></div>
-          <img id="imgs" src="#">
+          <img id="imgs" src="#" alt="#">
           <div id="temps"></div>
         </div>
         <div class="content">
           <div id="days"></div>
-          <img id="imgs" src="#">
+          <img id="imgs" src="#" alt="#">
           <div id="temps"></div>
         </div>
         <div class="content">
           <div id="days"></div>
-          <img id="imgs" src="#">
+          <img id="imgs" src="#" alt="#">
           <div id="temps"></div>
         </div>
         <div class="content">
           <div id="days"></div>
-          <img id="imgs" src="#">
+          <img id="imgs" src="#" alt="#">
           <div id="temps"></div>
         </div>
       </div>
