--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -103,7 +103,7 @@
         <p>208-123-4567</p>
         <p>contact@weatherday.com</p>
       </section>
-      <img src="images/preston.jpg" alt="Preston Map">
+      <img src="images/preston-map.jpg" alt="Preston Map">
     </div>
   </main>
   <footer>
