--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -8,9 +8,9 @@
         content="5 day weather forecast for Preston, Idaho on the Weather Day website. Explore and learn before you travel.">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="/lesson9/css/medium.css">
-    <link rel="stylesheet" href="/lesson9/css/large.css">
+    <link rel="stylesheet" href="css/stormcenter.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
     <title>Weather Day Preston</title>
 </head>
 
@@ -29,25 +29,18 @@
     <nav>
         <ul class="navigation" id="my-navigation">
             <li><a href="#" onclick="toggle()">&#9776; Menu</a></li>
-            <li><a class="active" href="https://bjneib.github.io/lesson11/index.html">Home</a></li>
-            <li><a href="https://bjneib.github.io/lesson11/preston.html">Preston</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="https://bjneib.github.io/lesson6/preston-6.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="https://bjneib.github.io/lesson11/stormcenter.html">Storm Center</a></li>
-            <li><a href="https://bjneib.github.io/lesson11/gallery.html">Gallery</a></li>
+            <li><a class="active" href="https://bjneib.github.io/lesson8/stormcenter.html">Storm Center</a></li>
+            <li><a href="https://bjneib.github.io/lesson7/gallery-7.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
-        <h2>Home</h2>
-        <div id="wireframe">
-        <a href="images/wireframeSmall.PNG">Small Wireframe</a>
-        <a href="images/wireframeMedium.PNG">Medium Wireframe</a>
-        <a href="images/wireframeLarge.PNG">Large Wireframe</a>
-        </div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam repudiandae velit quae, accusamus explicabo
-            excepturi magni suscipit asperiores facere veniam voluptate quod exercitationem impedit rem, dolorem quo
-            odit aliquam. Architecto.</p>
-        <div class="cards"></div>
+        <h2>Storm Report Recieved</h2>
+        <p style="text-align: center;">Thank you for your storm report submission.</p>  
+    </main>
     </main>
     <footer>
         <div>
@@ -58,7 +51,7 @@
         <span id="lastUpdate"></span>
     </footer>
     <script src="js/toggle.js"></script>
-    <script src="js/towndata.js"></script>
+    <script src="js/severity.js"></script>
 </body>
 
 </html>
