--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -29,12 +29,12 @@
   <nav>
     <ul class="navigation" id="my-navigation">
       <li><a href="#" onclick="toggle()">&#9776; Menu</a></li>
-      <li><a href="https://bjneib.github.io/lesson9/index.html">Home</a></li>
-      <li><a class="active" href="https://bjneib.github.io/lesson10/preston-10.html">Preston</a></li>
+      <li><a href="https://bjneib.github.io/lesson11/index.html">Home</a></li>
+      <li><a class="active" href="https://bjneib.github.io/lesson11/preston.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
-      <li><a href="https://bjneib.github.io/lesson8/stormcenter.html">Storm Center</a></li>
-      <li><a href="https://bjneib.github.io/lesson7/gallery-7.html">Gallery</a></li>
+      <li><a href="https://bjneib.github.io/lesson11/stormcenter.html">Storm Center</a></li>
+      <li><a href="https://bjneib.github.io/lesson11/gallery.html">Gallery</a></li>
     </ul>
   </nav>
   <main>
