--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -42,9 +42,9 @@
     <div class="content-box-1">
       <!--<img src="images/weatherbanner.jpeg" alt="Banner Summary">-->
       <picture>
-        <source media="(max-width: 500px)" srcset="images/wdd230_image_franklinSmall.jpg">
-        <source media="(max-width: 900px)" srcset="images/wdd230_image_franklinMedium.jpg">
-        <img src="images/wdd230_image_franklinLarge.jpg" alt="Banner Summary">
+        <source media="(max-width: 500px)" srcset="images/wdd230_image_franklinOriginal.jpeg">
+        <source media="(max-width: 900px)" srcset="images/wdd230_image_franklinOriginal.jpeg">
+        <img src="/lesson11/images/wdd230_image_franklinOriginal.jpeg" alt="Banner Summary">
       </picture>
       <section class="box-summary">
         <h3>Weather Summary</h3>
