final weather site

--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/preston.css">
   <link rel="stylesheet" href="css/medium.css">
   <link rel="stylesheet" href="css/large.css">
-  <title>Weather Day Preston</title>
+  <title>Weather Day Fish Haven</title>
 </head>
 
 <body>
@@ -30,21 +30,21 @@
     <ul class="navigation" id="my-navigation">
       <li><a href="#" onclick="toggle()">&#9776; Menu</a></li>
       <li><a href="https://bjneib.github.io/lesson11/index.html">Home</a></li>
-      <li><a class="active" href="https://bjneib.github.io/lesson11/preston.html">Preston</a></li>
-      <li><a href="#">Soda Springs</a></li>
-      <li><a href="#">Fish Haven</a></li>
+      <li><a href="https://bjneib.github.io/lesson11/preston.html">Preston</a></li>
+      <li><a href="https://bjneib.github.io/lesson11/sodasprings.html">Soda Springs</a></li>
+      <li><a class="active" href="https://bjnieb.github.io/lesson11/fishhaven.html">Fish Haven</a></li>
       <li><a href="https://bjneib.github.io/lesson11/stormcenter.html">Storm Center</a></li>
       <li><a href="https://bjneib.github.io/lesson11/gallery.html">Gallery</a></li>
     </ul>
   </nav>
   <main>
-    <h2>Preston, Idaho</h2>
+    <h2>Fish Haven, Idaho</h2>
     <div class="content-box-1">
       <!--<img src="images/weatherbanner.jpeg" alt="Banner Summary">-->
       <picture>
-        <source media="(max-width: 500px)" srcset="images/wdd230_image_franklinOriginal.jpeg">
-        <source media="(max-width: 900px)" srcset="images/wdd230_image_franklinOriginal.jpeg">
-        <img src="/lesson11/images/wdd230_image_franklinOriginal.jpeg" alt="Banner Summary">
+        <source media="(max-width: 500px)" srcset="images/fishhaven-banner.jpg">
+        <source media="(max-width: 900px)" srcset="images/fishhaven-banner.jpg">
+        <img src="/lesson11/images/fishhaven-banner.jpg" alt="Banner Summary">
       </picture>
       <section class="box-summary">
         <h3>Weather Summary</h3>
@@ -86,12 +86,12 @@
       </div>
     </div>
     <section class="events">
-      <h3>Upcoming Events:</h3>
-      <hr>
-      <p></p>
-  </section>
+        <h3>Upcoming Events:</h3>
+        <hr>
+        <p></p>
+    </section>
     <div class="content-box-3">
-      <img src="images/fall.webp" alt="Fall">
+      <img src="images/night-article.jpg" alt="Fall">
       <h3>Article</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda deleniti praesentium voluptatem repellendus
         quibusdam doloremque. Illum porro provident asperiores maxime aut dolor modi dolorum ab ipsum! Impedit expedita
@@ -102,13 +102,13 @@
     <div class="content-box-4">
       <section id="contact">
         <h3>Contact Information</h3>
-        <p>1234 Street Name</p>
-        <p>Newdale, Idaho</p>
-        <p>83436</p>
-        <p>208-123-4567</p>
+        <p>1234 Fish Street</p>
+        <p>Fish Haven, Idaho</p>
+        <p>83456</p>
+        <p>208-987-6543</p>
         <p>contact@weatherday.com</p>
       </section>
-      <img src="images/preston-map.jpg" alt="Preston Map">
+      <img src="images/fishhaven-map.PNG" alt="Preston Map">
     </div>
   </main>
   <footer>
@@ -120,7 +120,7 @@
   </footer>
   <script src="js/toggle.js"></script>
   <script src="js/windchill.js"></script>
-  <script src="js/prestonapi.js"></script>
+  <script src="js/fishhavenapi.js"></script>
 </body>
 
 </html>
