--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -31,8 +31,8 @@
             <li><a href="#" onclick="toggle()">&#9776; Menu</a></li>
             <li><a class="active" href="https://bjneib.github.io/lesson11/index.html">Home</a></li>
             <li><a href="https://bjneib.github.io/lesson11/preston.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Haven</a></li>
+            <li><a href="https://bjneib.github.io/lesson11/sodasprings.html">Soda Springs</a></li>
+            <li><a href="https://bjneib.github.io/lesson11/fishhaven.html">Fish Haven</a></li>
             <li><a href="https://bjneib.github.io/lesson11/stormcenter.html">Storm Center</a></li>
             <li><a href="https://bjneib.github.io/lesson11/gallery.html">Gallery</a></li>
         </ul>
@@ -40,9 +40,9 @@
     <main>
         <h2>Home</h2>
         <div id="wireframe">
-        <a href="images/wireframeSmall.PNG">Small Wireframe</a>
-        <a href="images/wireframeMedium.PNG">Medium Wireframe</a>
-        <a href="images/wireframeLarge.PNG">Large Wireframe</a>
+            <a href="images/wireframeSmall.PNG">Small Wireframe</a>
+            <a href="images/wireframeMedium.PNG">Medium Wireframe</a>
+            <a href="images/wireframeLarge.PNG">Large Wireframe</a>
         </div>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam repudiandae velit quae, accusamus explicabo
             excepturi magni suscipit asperiores facere veniam voluptate quod exercitationem impedit rem, dolorem quo
