--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -31,8 +31,8 @@
             <li><a href="#" onclick="toggle()">&#9776; Menu</a></li>
             <li><a href="https://bjneib.github.io/lesson11/index.html">Home</a></li>
             <li><a href="https://bjneib.github.io/lesson11/preston.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Haven</a></li>
+            <li><a href="https://bjneib.github.io/lesson11/sodasprings.html">Soda Springs</a></li>
+            <li><a href="https://bjneib.github.io/lesson11/fishhaven.html">Fish Haven</a></li>
             <li><a class="active" href="https://bjneib.github.io/lesson11/stormcenter.html">Storm Center</a></li>
             <li><a href="https://bjneib.github.io/lesson11/gallery.html">Gallery</a></li>
         </ul>
