--- a/scoots/index.html
+++ b/scoots/index.html
@@ -19,10 +19,10 @@
     </div>
     <header>
         <picture>
-            <img src="images/weatherday.png" alt="Weather Day">
+            <img src="images/scoots.png" alt="Scoots Logo">
         </picture>
         <section>
-            <h1>Weather Day</h1>
+            <h1>Scoots</h1>
             <div class="sub-heading">Cozumel Rentals and Tours for you.</div>
         </section>
     </header>
@@ -31,23 +31,61 @@
             <li><a href="#" onclick="toggle()">&#9776; Menu</a></li>
             <li><a class="active" href="https://bjneib.github.io/lesson11/index.html">Home</a></li>
             <li><a href="https://bjneib.github.io/lesson11/preston.html">Rentals</a></li>
+            <li><a href="https://bjneib.github.io/lesson11/stormcenter.html">Reservations</a></li>
             <li><a href="https://bjneib.github.io/lesson11/sodasprings.html">Tours</a></li>
             <li><a href="https://bjneib.github.io/lesson11/fishhaven.html">Contact</a></li>
-            <li><a href="https://bjneib.github.io/lesson11/stormcenter.html">Reservations</a></li>
             <!--<li><a href="https://bjneib.github.io/lesson11/gallery.html">Gallery</a></li>-->
         </ul>
     </nav>
     <main>
         <h2>Home</h2>
-        <div id="wireframe">
-            <a href="images/wireframeSmall.PNG">Small Wireframe</a>
-            <a href="images/wireframeMedium.PNG">Medium Wireframe</a>
-            <a href="images/wireframeLarge.PNG">Large Wireframe</a>
-        </div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam repudiandae velit quae, accusamus explicabo
-            excepturi magni suscipit asperiores facere veniam voluptate quod exercitationem impedit rem, dolorem quo
-            odit aliquam. Architecto.</p>
+        <p>Welcome to Scoots! Here we offer motor rentals and tours for those who want to see more of what our little
+            island offers. Our tours are guided by our best! Our guides know everything about Cozumel and can show you
+            all of the little details that you wounldn't know otherwise. Please make us one of your stops on your visit
+            here and we can tale you the rest of the way!</p>
+            <div id="wireframe">Please make a reservation 
+                <a href="https://bjneib.github.io/lesson11/stormcenter.html">here.</a>
+            </div>
         <div class="cards"></div>
+        <h3>Cozumel Forecast</h3>
+        <section class="box-summary">
+            <h3>Weather Summary</h3>
+            <p>Currently: <span id="current"></span></p>
+            <p>Temperature: <span id="temp"></span>°F</p>
+            <p>Wind Chill: <span id="windchill"></span>°F</p>
+            <p>Humidity: <span id="humidity"></span>%</p>
+            <p>Wind Speed: <span id="windspeed"></span> mph</p>
+          </section>
+        </div>
+        <div class="content-box-2">
+          <div class="forecast">
+            <div class="content">
+              <div id="days"></div>
+              <img id="imgs" src="#" alt="#">
+              <div id="temps"></div>
+            </div>
+            <div class="content">
+              <div id="days"></div>
+              <img id="imgs" src="#" alt="#">
+              <div id="temps"></div>
+            </div>
+            <div class="content">
+              <div id="days"></div>
+              <img id="imgs" src="#" alt="#">
+              <div id="temps"></div>
+            </div>
+            <div class="content">
+              <div id="days"></div>
+              <img id="imgs" src="#" alt="#">
+              <div id="temps"></div>
+            </div>
+            <div class="content">
+              <div id="days"></div>
+              <img id="imgs" src="#" alt="#">
+              <div id="temps"></div>
+            </div>
+          </div>
+        </div>
     </main>
     <footer>
         <div>
@@ -59,6 +97,8 @@
     </footer>
     <script src="js/toggle.js"></script>
     <script src="js/towndata.js"></script>
+    <script src="js/windchill.js"></script>
+    <script src="js/cozumelapi.js"></script>
 </body>
 
 </html>
