--- a/scoots/confirmation.html
+++ b/scoots/confirmation.html
@@ -39,25 +39,7 @@
     </nav>
     <main>
         <h2>Payment Confirmation</h2>
-        <form>
-            <fieldset>
-                <legend>Personal Information</legend>
-                <label class="top">*Full Name: <input type="text" name="fname" pattern="^[a-zA-Z\s\-\.]{5,}$"
-                        required></label>
-                <label class="top">
-                    *Card Type: <select name="card" required>
-                        <option selected disabled>Select Card &#9662;</option>
-                        <option value="Visa">Visa</option>
-                        <option value="Mastercard">Mastercard</option>
-                        <option value="Discover">Discover</option>
-                        <option value="American Express">American Express</option>
-                    </select>
-                </label>
-                <label class="top">*Amount: <input type="number" name="amount" placeholder="50.00" required></label>
-                <label class="top">*Zip: <input type="zip" name="zipcode" required></label>
-            </fieldset>
-            <input type="submit" value="Pay Now" class="submitBtn">
-        </form>
+        <p style="text-align: center;">Thank you! Your payment and reservation has been recieved.</p>
     </main>
     <footer>
         <div>
