--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -5,46 +5,46 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="5 day weather forecast for Preston, Idaho on the Weather Day website. Explore and learn before you travel.">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    content="Come and explore the wonderful island of Cozumel! We will supply you with rentals and tours!">
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/preston.css">
   <link rel="stylesheet" href="css/medium.css">
   <link rel="stylesheet" href="css/large.css">
-  <title>Weather Day Preston</title>
+  <title>Scoots - Rentals and Tours</title>
 </head>
 
 <body>
-  <div id="banner">Saturday = Preston Pancakes in the Park! 9:00 a.m. Friday at the city park.
+  <div id="banner">Saturday Special Tour! Discounted prices for everyone!
   </div>
   <header>
     <picture>
-      <img src="images/weatherday.png" alt="Weather Day">
+      <img src="images/scoots.png" alt="Scoots">
     </picture>
     <section>
-      <h1>Weather Day</h1>
-      <div class="sub-heading">Your 5 Day Weather Forecast</div>
+      <h1>Scoots</h1>
+      <div class="sub-heading">Cozumel Rentals and Tours for you.</div>
     </section>
   </header>
   <nav>
     <ul class="navigation" id="my-navigation">
       <li><a href="#" onclick="toggle()">&#9776; Menu</a></li>
-      <li><a href="https://bjneib.github.io/lesson11/index.html">Home</a></li>
-      <li><a class="active" href="https://bjneib.github.io/lesson11/preston.html">Preston</a></li>
-      <li><a href="https://bjneib.github.io/lesson11/sodasprings.html">Soda Springs</a></li>
-      <li><a href="https://bjneib.github.io/lesson11/fishhaven.html">Fish Haven</a></li>
-      <li><a href="https://bjneib.github.io/lesson11/stormcenter.html">Storm Center</a></li>
-      <li><a href="https://bjneib.github.io/lesson11/gallery.html">Gallery</a></li>
+      <li><a href="https://bjneib.github.io/scoots/index.html">Home</a></li>
+      <li><a href="https://bjneib.github.io/scoots/rentals.html">Rentals</a></li>
+      <li><a href="https://bjneib.github.io/scoots/reservation.html">Reservations</a></li>
+      <li><a href="https://bjneib.github.io/scoots/tours.html">Tours</a></li>
+      <li><a class="active" href="https://bjnieb.github.io/scoots/contact.html">Contact</a></li>
+      <!--<li><a href="https://bjneib.github.io/lesson11/gallery.html">Gallery</a></li>-->
     </ul>
   </nav>
   <main>
-    <h2>Preston, Idaho</h2>
+    <h2>Contact</h2>
     <div class="content-box-1">
       <!--<img src="images/weatherbanner.jpeg" alt="Banner Summary">-->
       <picture>
-        <source media="(max-width: 500px)" srcset="images/wdd230_image_franklinOriginal.jpeg">
-        <source media="(max-width: 900px)" srcset="images/wdd230_image_franklinOriginal.jpeg">
-        <img src="/lesson11/images/wdd230_image_franklinOriginal.jpeg" alt="Banner Summary">
+        <source media="(max-width: 500px)" srcset="images/fishhaven-banner.jpg">
+        <source media="(max-width: 900px)" srcset="images/fishhaven-banner.jpg">
+        <img src="/lesson11/images/fishhaven-banner.jpg" alt="Banner Summary">
       </picture>
       <section class="box-summary">
         <h3>Weather Summary</h3>
@@ -86,12 +86,12 @@
       </div>
     </div>
     <section class="events">
-      <h3>Upcoming Events:</h3>
-      <hr>
-      <p></p>
-  </section>
+        <h3>Upcoming Events:</h3>
+        <hr>
+        <p></p>
+    </section>
     <div class="content-box-3">
-      <img src="images/fall.webp" alt="Fall">
+      <img src="images/night-article.jpg" alt="Fall">
       <h3>Article</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda deleniti praesentium voluptatem repellendus
         quibusdam doloremque. Illum porro provident asperiores maxime aut dolor modi dolorum ab ipsum! Impedit expedita
@@ -102,13 +102,13 @@
     <div class="content-box-4">
       <section id="contact">
         <h3>Contact Information</h3>
-        <p>1234 Street Name</p>
-        <p>Newdale, Idaho</p>
-        <p>83436</p>
-        <p>208-123-4567</p>
+        <p>1234 Fish Street</p>
+        <p>Fish Haven, Idaho</p>
+        <p>83456</p>
+        <p>208-987-6543</p>
         <p>contact@weatherday.com</p>
       </section>
-      <img src="images/preston-map.jpg" alt="Preston Map">
+      <img src="images/fishhaven-map.PNG" alt="Preston Map">
     </div>
   </main>
   <footer>
@@ -120,7 +120,7 @@
   </footer>
   <script src="js/toggle.js"></script>
   <script src="js/windchill.js"></script>
-  <script src="js/prestonapi.js"></script>
+  <script src="js/fishhavenapi.js"></script>
 </body>
 
 </html>
