--- a/scoots/index.html
+++ b/scoots/index.html
@@ -29,11 +29,11 @@
     <nav>
         <ul class="navigation" id="my-navigation">
             <li><a href="#" onclick="toggle()">&#9776; Menu</a></li>
-            <li><a class="active" href="https://bjneib.github.io/lesson11/index.html">Home</a></li>
-            <li><a href="https://bjneib.github.io/lesson11/preston.html">Rentals</a></li>
-            <li><a href="https://bjneib.github.io/lesson11/stormcenter.html">Reservations</a></li>
-            <li><a href="https://bjneib.github.io/lesson11/sodasprings.html">Tours</a></li>
-            <li><a href="https://bjneib.github.io/lesson11/fishhaven.html">Contact</a></li>
+            <li><a class="active" href="https://bjneib.github.io/scoots/index.html">Home</a></li>
+            <li><a href="https://bjneib.github.io/scoots/rentals.html">Rentals</a></li>
+            <li><a href="https://bjneib.github.io/scoots/reservation.html">Reservations</a></li>
+            <li><a href="https://bjneib.github.io/scoots/tours.html">Tours</a></li>
+            <li><a href="https://bjneib.github.io/scoots/contact.html">Contact</a></li>
             <!--<li><a href="https://bjneib.github.io/lesson11/gallery.html">Gallery</a></li>-->
         </ul>
     </nav>
