--- a/scoots/tours.html
+++ b/scoots/tours.html
@@ -5,40 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="5 day weather forecast for Preston, Idaho on the Weather Day website. Explore and learn before you travel.">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+        content="Come and explore the wonderful island of Cozumel! We will supply you with rentals and tours!">
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/preston.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
-    <title>Weather Day Soda Springs</title>
+    <title>Scoots - Rentals and Tours</title>
 </head>
 
 <body>
-    <div id="banner">Saturday = Preston Pancakes in the Park! 9:00 a.m. Friday at the city park.
+    <div id="banner">Saturday Special Tour! Discounted prices for everyone!
     </div>
     <header>
         <picture>
-            <img src="images/weatherday.png" alt="Weather Day">
+            <img src="images/scoots.png" alt="Scoots">
         </picture>
         <section>
-            <h1>Weather Day</h1>
-            <div class="sub-heading">Your 5 Day Weather Forecast</div>
+            <h1>Scoots</h1>
+            <div class="sub-heading">Cozumel Rentals and Tours for you.</div>
         </section>
     </header>
     <nav>
         <ul class="navigation" id="my-navigation">
             <li><a href="#" onclick="toggle()">&#9776; Menu</a></li>
-            <li><a href="https://bjneib.github.io/lesson11/index.html">Home</a></li>
-            <li><a href="https://bjneib.github.io/lesson11/preston.html">Preston</a></li>
-            <li><a class="active" href="https://bjneib.github.io/lesson11/sodasprings.html">Soda Springs</a></li>
-            <li><a href="https://bjneib.github.io/lesson11/fishhaven.html">Fish Haven</a></li>
-            <li><a href="https://bjneib.github.io/lesson11/stormcenter.html">Storm Center</a></li>
-            <li><a href="https://bjneib.github.io/lesson11/gallery.html">Gallery</a></li>
+            <li><a href="https://bjneib.github.io/scoots/index.html">Home</a></li>
+            <li><a href="https://bjneib.github.io/scoots/rentals.html">Rentals</a></li>
+            <li><a href="https://bjneib.github.io/scoots/reservation.html">Reservations</a></li>
+            <li><a class="active" href="https://bjneib.github.io/scoots/tours.html">Tours</a></li>
+            <li><a href="https://bjneib.github.io/scoots/contact.html">Contact</a></li>
+            <!--<li><a href="https://bjneib.github.io/lesson11/gallery.html">Gallery</a></li>-->
         </ul>
     </nav>
     <main>
-        <h2>Soda Springs, Idaho</h2>
+        <h2>Tours</h2>
         <div class="content-box-1">
             <!--<img src="images/weatherbanner.jpeg" alt="Banner Summary">-->
             <picture>
