--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -38,7 +38,7 @@
     </ul>
   </nav>
   <main>
-    <h2>Preston, Idaho</h2>
+    <h2>Rentals</h2>
     <div class="content-box-1">
       <!--<img src="images/weatherbanner.jpeg" alt="Banner Summary">-->
       <picture>
